--- a/articles.html
+++ b/articles.html
@@ -1,30 +1,214 @@
-<!doctype html>
-<html lang='ar' dir='rtl'>
-<head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/>
-<title>مقالات — فخر الدين فياض</title>
+ <!doctype html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>المقالات — فخر الدين فياض</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel='stylesheet' href='css/style.css'></head>
+<link rel="stylesheet" href="css/style.css">
+
+</head>
 <body>
-<header class='wrap'><nav><div class='brand'>فخر الدين فياض</div><div class='menu'><a href='index.html'>الصفحة الرئيسية</a><a href='books.html'>الكتب</a><a href='articles.html'>المقالات</a></div></nav></header>
-<main class='wrap' style='margin-top:2rem'>
-  <div class='section-title'><h2>المقالات</h2></div>
-  <div class='articles'>
-    <article class='article reveal'>
-      <p class='meta'>15 مارس 2021 · تحقيق</p>
-      <h3><a href='articles/why-they-hate-us.html'>لماذا يكرهوننا؟ — قراءة في دوافع الصراع ونمط الخطاب</a></h3>
-      <p class='kv'>مقال تحليلي يستعرض جذور الموقف الدولي والإقليمي تجاه العالم العربي.</p>
-    </article>
-    <article class='article reveal'>
-      <p class='meta'>10 نوفمبر 2019 · رأي</p>
-      <h3><a href='articles/american-defeat.html'>هزيمة العسكرتاريا الأمريكية — قراءة في السياسات والنتائج</a></h3>
-      <p class='kv'>تحليل لنتائج التدخلات العسكرية الأمريكية في المنطقة.</p>
-    </article>
-    <article class='article reveal'>
-      <p class='meta'>2 يوليو 2014 · نقد روائي</p>
-      <h3><a href='articles/ramsh-eil-review.html'>قراءة في "رمش إيل" — بين الحدث والبناء الروائي</a></h3>
-      <p class='kv'>نقد لعمله الروائي وتقنيات السرد.</p>
-    </article>
+
+<header class="wrap">
+  <nav>
+    <div class="brand">فخر الدين فياض</div>
+    <div class="menu">
+      <a href="index.html">الصفحة الرئيسية</a>
+      <a href="books.html">الكتب</a>
+      <a href="articles.html">المقالات</a>
+    </div>
+  </nav>
+</header>
+
+<main class="wrap" style="margin-top:2rem">
+
+  <div class="section-title">
+    <h2>المقالات</h2>
   </div>
+
+  <div class="categories">
+
+    <!-- ===================== 1 — الأدب والفن ===================== -->
+    <div class="category-block reveal">
+      <h3 class="category-title">الأدب والفن</h3>
+
+      <div class="sub-categories">
+
+        <div class="sub-category">
+          <div class="sub-title">مقالات نقدية</div>
+          <div class="articles-grid">
+
+            <div class="article-card">
+              <h4><a href="articles/ramsh-eil-review.html">قراءة في "رمش إيل"</a></h4>
+              <div class="meta">نقد روائي · 2014</div>
+              <p>مقاربة نقدية لعمله الروائي الأكثر شهرة.</p>
+            </div>
+
+            <div class="article-card">
+              <h4><a href="#">الشعر والهوية الحديثة</a></h4>
+              <div class="meta">مقال أدبي · 2020</div>
+              <p>تحليل دور الشعر في تشكيل الوعي العربي.</p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- ===================== 2 — حقوق الإنسان ===================== -->
+    <div class="category-block reveal">
+      <h3 class="category-title">حقوق الإنسان</h3>
+
+      <div class="sub-categories">
+
+        <div class="sub-category">
+          <div class="sub-title">دراسات وتقارير</div>
+
+          <div class="articles-grid">
+
+            <div class="article-card">
+              <h4><a href="#">الحريات الأساسية في العالم العربي</a></h4>
+              <div class="meta">تقرير · 2019</div>
+              <p>قراءة شاملة عن واقع الحقوق المدنية والسياسية.</p>
+            </div>
+
+            <div class="article-card">
+              <h4><a href="#">قمع التعبير عبر التاريخ</a></h4>
+              <div class="meta">بحث · 2021</div>
+              <p>كيف تحوّل الإعلام إلى أداة ضبط اجتماعي؟</p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- ===================== 3 — مواضيع وأبحاث سياسية ===================== -->
+    <div class="category-block reveal">
+      <h3 class="category-title">مواضيع وأبحاث سياسية</h3>
+
+      <div class="sub-categories">
+
+        <div class="sub-category">
+          <div class="sub-title">تحليل سياسي</div>
+
+          <div class="articles-grid">
+
+            <div class="article-card">
+              <h4><a href="articles/american-defeat.html">هزيمة العسكرتاريا الأمريكية</a></h4>
+              <div class="meta">تحليل سياسي · 2019</div>
+              <p>قراءة معمّقة في السياسات العسكرية ونتائجها.</p>
+            </div>
+
+            <div class="article-card">
+              <h4><a href="articles/why-they-hate-us.html">لماذا يكرهوننا؟</a></h4>
+              <div class="meta">تحقيق · 2021</div>
+              <p>تحليل جذور الخطاب الدولي تجاه المنطقة.</p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- ===================== 4 — حقوق المرأة ومساواتها ===================== -->
+    <div class="category-block reveal">
+      <h3 class="category-title">حقوق المرأة ومساواتها الكاملة</h3>
+
+      <div class="sub-categories">
+        <div class="sub-category">
+          <div class="sub-title">أبحاث نسوية</div>
+
+          <div class="articles-grid">
+
+            <div class="article-card">
+              <h4><a href="#">العنف ضد المرأة</a></h4>
+              <div class="meta">تقرير · 2022</div>
+              <p>دراسة عن أسباب استمرار العنف البنيوي.</p>
+            </div>
+
+            <div class="article-card">
+              <h4><a href="#">المساواة في التشريعات العربية</a></h4>
+              <div class="meta">بحث قانوني · 2023</div>
+              <p>قراءة في التحديات القانونية والاجتماعية.</p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ===================== 5 — العلمانية — نقد الفكر الديني ===================== -->
+    <div class="category-block reveal">
+      <h3 class="category-title">العلمانية — نقد الفكر الديني</h3>
+
+      <div class="sub-categories">
+        <div class="sub-category">
+          <div class="sub-title">مقالات فكرية</div>
+
+          <div class="articles-grid">
+
+            <div class="article-card">
+              <h4><a href="#">الدين والسياسة</a></h4>
+              <div class="meta">فكر سياسي · 2018</div>
+              <p>العلاقة بين الدولة الحديثة والسلطة الدينية.</p>
+            </div>
+
+            <div class="article-card">
+              <h4><a href="#">نقد الخطاب الطائفي</a></h4>
+              <div class="meta">مقال فكري · 2020</div>
+              <p>تحليل آليات إنتاج الخطاب الطائفي.</p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ===================== 6 — كتابات ساخرة ===================== -->
+    <div class="category-block reveal">
+      <h3 class="category-title">كتابات ساخرة</h3>
+
+      <div class="sub-categories">
+        <div class="sub-category">
+          <div class="sub-title">سخرية سياسية واجتماعية</div>
+
+          <div class="articles-grid">
+
+            <div class="article-card">
+              <h4><a href="#">يوميات مواطن لا يعرف ماذا يجري</a></h4>
+              <div class="meta">ساخر · 2020</div>
+              <p>نقد ساخر للواقع العربي المرير.</p>
+            </div>
+
+            <div class="article-card">
+              <h4><a href="#">كيف تُدار بلادنا؟</a></h4>
+              <div class="meta">ساخر · 2021</div>
+              <p>مسرحية سياسية في شكل مقال.</p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
 </main>
-<footer class='wrap'><div style='display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem'><div>© جميع الحقوق محفوظة — فخر الدين فياض 2025</div><div style='color:#bfb6a8'>موقع احترافي جاهز للنشر</div></div></footer>
-<script src='js/main.js'></script></body></html>
+
+<footer class="wrap">
+  <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem">
+    <div>© جميع الحقوق محفوظة — فخر الدين فياض 2025</div>
+    <div style="color:#bfb6a8">موقع احترافي جاهز للنشر</div>
+  </div>
+</footer>
+
+<script src="js/main.js"></script>
+
+</body>
+</html>
