--- a/articles.html
+++ b/articles.html
@@ -116,7 +116,8 @@
       </div>
     </div>
 
-    <!-- ===================== 4 — حقوق المرأة ومساواتها ===================== -->
+    
+   <!-- ===================== 4 — حقوق المرأة ومساواتها ===================== -->
     <div class="category-block reveal">
       <h3 class="category-title">حقوق المرأة ومساواتها الكاملة</h3>
 
@@ -126,6 +127,13 @@
 
           <div class="articles-grid">
 
+           <div class="article-card">
+  <h4><a href="articles/huda-victim.html">هدى.. ذبيحة "ما ملكت إيمانكم"</a></h4>
+  <div class="meta">حقوق المرأة · الحوار المتمدن · 5 أكتوبر 2005</div>
+  <p>مقالة ناقدة تتناول قضية الشرف وثقافة العنف ضد المرأة في المجتمعات العربية.</p>
+</div>
+
+           
             <div class="article-card">
               <h4><a href="#">العنف ضد المرأة</a></h4>
               <div class="meta">تقرير · 2022</div>
