--- a/articles.html
+++ b/articles.html
@@ -133,6 +133,13 @@
   <p>مقالة ناقدة تتناول قضية الشرف وثقافة العنف ضد المرأة في المجتمعات العربية.</p>
 </div>
 
+           <div class="article-card">
+  <h4><a href="articles/childhood-huda.html">طفولة.. إلى حلم لم تعشه هدى أبو عسلي</a></h4>
+  <div class="meta">حقوق المرأة · الحوار المتمدن · 25 سبتمبر 2005</div>
+  <p>نص أدبي مؤلم يروي حكاية الطفولة والحب والاغتيال الرمزي لهدى، في سياق نقد اجتماعي حاد للعنف ضد المرأة.</p>
+</div>
+
+           
            
             <div class="article-card">
               <h4><a href="#">العنف ضد المرأة</a></h4>
